[gd_scene load_steps=14 format=2]

[ext_resource path="res://ScalingShader.gdshader" type="Shader" id=1]
[ext_resource path="res://Assets/BackgroundMountainSimple.png" type="Texture" id=2]
[ext_resource path="res://Assets/MainScreenFontTheme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Borders/Elements_Border_Bottom.png" type="Texture" id=4]
[ext_resource path="res://Assets/Borders/Elements_Border_Right.png" type="Texture" id=5]
[ext_resource path="res://Assets/Borders/Elements_Border_Left.png" type="Texture" id=6]
[ext_resource path="res://Assets/Borders/Elements_Border_top.png" type="Texture" id=7]
[ext_resource path="res://Assets/FRUSTAPAR_TITLE_3.png" type="Texture" id=8]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Click.tscn" type="PackedScene" id=10]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 1 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 1 )

[node name="TitleScreen" type="Node2D"]

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 9 )

[node name="Click" parent="Control" instance=ExtResource( 10 )]

[node name="TextureRect" type="TextureRect" parent="Control"]
modulate = Color( 0.968627, 0.988235, 0.654902, 1 )
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = 643.0
margin_bottom = 481.0
texture = ExtResource( 2 )
expand = true

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 177.0
margin_top = 167.0
margin_right = 465.0
margin_bottom = 434.0
color = Color( 0.486275, 0.847059, 0.243137, 0.560784 )

[node name="ElementsBorderBottom" type="Sprite" parent="Control/ColorRect"]
position = Vector2( 144, 273 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )

[node name="ElementsBorderRight" type="Sprite" parent="Control/ColorRect"]
material = SubResource( 3 )
position = Vector2( 294, 133.082 )
scale = Vector2( 1.5, 0.697488 )
texture = ExtResource( 5 )

[node name="ElementsBorderLeft" type="Sprite" parent="Control/ColorRect"]
position = Vector2( -6, 133.477 )
scale = Vector2( 1.5, 0.695431 )
texture = ExtResource( 6 )

[node name="ElementsBorderTop" type="Sprite" parent="Control/ColorRect"]
position = Vector2( 144, -6 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 181.0
margin_top = 163.0
margin_right = 461.0
margin_bottom = 445.0
size_flags_vertical = 2
theme = ExtResource( 3 )
custom_constants/separation = 15
alignment = 1

[node name="PlayButton" type="Button" parent="Control/VBoxContainer"]
margin_top = 16.0
margin_right = 280.0
margin_bottom = 67.0
text = "PLAY"

[node name="HighscoreButton" type="Button" parent="Control/VBoxContainer"]
margin_top = 82.0
margin_right = 280.0
margin_bottom = 133.0
text = "HIGHSCORE"

[node name="Audio" type="Button" parent="Control/VBoxContainer"]
margin_top = 148.0
margin_right = 280.0
margin_bottom = 199.0
text = "Audio"

[node name="QuitGame" type="Button" parent="Control/VBoxContainer"]
margin_top = 214.0
margin_right = 280.0
margin_bottom = 265.0
text = "EXIT"

[node name="FrustaparTitle3" type="Sprite" parent="Control"]
material = SubResource( 4 )
position = Vector2( 317, 93 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 8 )

[connection signal="button_up" from="Control/VBoxContainer/PlayButton" to="Control" method="_on_PlayButton_button_up"]
[connection signal="button_up" from="Control/VBoxContainer/HighscoreButton" to="Control" method="_on_HighscoreButton_button_up"]
[connection signal="button_up" from="Control/VBoxContainer/Audio" to="Control" method="_on_Audio_button_up"]
[connection signal="button_up" from="Control/VBoxContainer/QuitGame" to="Control" method="_on_QuitGame_button_up"]
